example project for HealthKIT

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "007-watchos",
+  "name": "007-watchos-hk",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
